--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,214 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  overflow: hidden;
+  background-color: #262b27;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  
+  
+}
+
+
+
+.dropdown {
+  
+  overflow: hidden;
+  background-color: #262b27;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+  
+  align-items: center;
+  
+  
+  
+  
+}
+ .navbar a{
+  font-size: 16px;
   color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none ;
+  justify-content: center;
+  display: flex;
+  font-weight: bolder;
+  
+  
+
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 26px ;
+  background-color: inherit;
+  font: inherit;
+  margin-bottom: 30px;
+  border-left: 1px solid lightblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar a:hover, .dropdown:hover .dropbtn {
+  color: yellow;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  left: 0;
+  margin-top: 10px;
+  z-index: 1;
+}
+
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  margin: 20px;
+
+  
+}
+
+.line:before, .line:after{
+  content:'';
+  float:left;
+  display:block;
+  width:50%;
+  border-top:1px solid lightblue;
+  box-sizing:border-box;
+  transform-origin:0 100%;
+}
+.dropdown:hover .line:before{
+  transform: skewX(45deg);
+  border-right:3px solid #fff;
+  height:20px;
+}
+.dropdown:hover .line:after{
+  transform: skewX(-45deg);
+  border-left:3px solid #fff;
+  margin-left:-3px;
+  height:20px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px 10px 10px;
+  background-color: #262b27;
+  height: 250px;
+  border-left: 1px solid white;
+}
+
+.column a {
+  float: none;
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.column a:hover {
+  text-decoration: underline;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    height: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+  /*Main content of page*/
+}
+.mainContent{
+  height: 600px;
+  background-color:white;
+}
+
+/* footer CSS */
+
+.flex-container {
+  display: flex;
+  height: 200px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  align-content: bottom;
+  background-color: #f1f1f1;
+}
+.logo {
+  background-color: #262b27;
+  width: 20%;
+  margin: 1px;
+  justify-content: center;
+  
+  font-size: 30px;
+  align-items: center;
+  display: flex;
+  border-bottom: 1px solid lightblue;
+  
+  
+}
+.logo img{
+  max-width: 70%;
+}
+.footerIcons {
+  background-color: #262b27;
+  width: 20%;
+  margin: 1px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+  color: #f1f1f1;
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+  
+  
+}
+.footerMain {
+  background-color: #262b27;
+  width: 60%;
+  margin: 1px;
+  text-align: left;
+  line-height: 35px;
+  font-size: 18px;
+  font-weight: bold;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  
+}
+.footerMain li {
+  display: inline-block;
+  color: #f1f1f1;
+}
+.footerMain li:before{
+  content: '\00a0\2022\00a0\00a0';
+}
+.footerMain li:first-child:before{
+  content: '';
 }
