--- a/src/components/home.css
+++ b/src/components/home.css
@@ -15,12 +15,25 @@
     font-family:arial,sans-serif;
     line-height: 1.4;
     color: darkgreen;
-   margin: auto;
+	width:50%;
+   margin:auto;
+   padding-top: 50px;
+   background-image: url(../images/arrow.png) ;
+   background-repeat: no-repeat;
+   background-position: left top;
+   background-size: 300px 300px;
+   
+   
     }
 
 	.description p{
-		font-size: 10px;
+		font-size: 20px;
+		
 	}
+	
+
+	
+	
 .title{
     position: absolute;
   z-index: 1;
