on Click event added

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
+html{
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-x: inherit;
+}
 
 .App {
   text-align: center;
+  width: 100vw;
+  
+  overflow-x: none;
+
 }
 
 .App-logo {
